feat: add gateway service
